--- a/ui/package.json
+++ b/ui/package.json
@@ -5,17 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -w server -e js,graphql server/server.js",
+    "start": "nodemon -w uiserver.js uiserver.js",
     "compile": "babel src --out-dir public",
     "watch": "babel src --out-dir public --watch --verbose"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^2.25.2",
     "express": "^4.17.1",
-    "graphql": "^0.13.2",
-    "mongodb": "^3.7.3",
     "nodemon": "^1.19.4"
   },
   "devDependencies": {
