--- a/api/package.json
+++ b/api/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -e js,graphql server.js"
+    "start": "nodemon -e js,graphql -w . -w .env server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.3.1",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "graphql": "^0.13.2",
     "mongodb": "^3.1.10",
