--- a/api/package.json
+++ b/api/package.json
@@ -16,5 +16,10 @@
     "graphql": "^0.13.2",
     "mongodb": "^3.1.10",
     "nodemon": "^1.18.9"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.25.3"
   }
 }
