Minor changes to server and env

--- a/api/sample.env
+++ b/api/sample.env
@@ -11,4 +11,4 @@ DB_URL=mongodb://localhost/issuetracker
 API_SERVER_PORT=3000
 
 ## Enable CORS (default:true)
-ENABLE_CORS=false
+ENABLE_CORS=true
