Having issues with linting

--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -e js,graphql -w . -w .env server.js"
+    "start": "nodemon -e js,graphql -w . -w .env server.js",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
