--- a/ui/package.json
+++ b/ui/package.json
@@ -5,17 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-
-    "#start":"UI server. HMR is enabled in dev mode.",
+    "#start": "UI server. HMR is enabled in dev mode.",
     "start": "nodemon -w uiserver.js -w .env uiserver.js",
-
-    "#lint":"Runs ESLint on all relevant files",
+    "#lint": "Runs ESLint on all relevant files",
     "lint": "eslint . --ext js,jsx --ignore-pattern public",
-
-    "#compile":"Generates JS bundles for production. Use with start.",
+    "#compile": "Generates JS bundles for production. Use with start.",
     "compile": "webpack --mode production",
-
-    "#watch":"Compile, and recompile any changes",
+    "#watch": "Compile, and recompile any changes",
     "watch": "webpack --watch"
   },
   "author": "",
@@ -29,6 +25,7 @@
     "prop-types": "^15.8.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-router-dom": "^4.3.1",
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
