--- a/ui/package.json
+++ b/ui/package.json
@@ -18,12 +18,14 @@
   "license": "ISC",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "bootstrap": "^3.4.1",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.21.0",
     "nodemon": "^1.19.4",
     "prop-types": "^15.8.1",
     "react": "^16.14.0",
+    "react-bootstrap": "^0.33.1",
     "react-dom": "^16.14.0",
     "react-router-dom": "^4.3.1",
     "url-search-params": "^1.1.0",
