--- a/ui/package.json
+++ b/ui/package.json
@@ -27,6 +27,7 @@
     "react": "^16.14.0",
     "react-bootstrap": "^0.33.1",
     "react-dom": "^16.14.0",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "url-search-params": "^1.1.0",
     "whatwg-fetch": "^3.6.2"
