--- a/ui/src/.eslintrc
+++ b/ui/src/.eslintrc
@@ -1,7 +1,7 @@
 {
-    "extends": "airbnb",
     "env": {
-      "browser": true
+      "browser": true,
+      "node": true
     },
     "rules": {
       "import/extensions":["error","always",{"ignorePackages":true}],
