Added hydrate to frontend server rendering and now fixing the frontend

--- a/ui/sample.env
+++ b/ui/sample.env
@@ -1,4 +1,7 @@
-UI_SERVER_PORt=8000
-API_PROXY_TARGET=http://localhost:3000
+UI_SERVER_PORT=8000
+UI_API_ENDPOINT=http://localhost:3000/graphql
 
-UI_API_ENDPOINT:"http://localhost:3000/graphql"
+
+# UI_SERVER_API_ENDPOINT=http://localhost:3000/graphql
+# API_PROXY_TARGET=http://localhost:3000
+# ENABLE_HMR=true
