--- a/ui/package.json
+++ b/ui/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.21.0",
+    "isomorphic-fetch": "^2.2.1",
     "nodemon": "^1.19.4",
     "prop-types": "^15.8.1",
     "react": "^16.14.0",
@@ -32,8 +33,7 @@
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "source-map-support": "^0.5.21",
-    "url-search-params": "^1.1.0",
-    "whatwg-fetch": "^3.6.2"
+    "url-search-params": "^1.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
