--- a/ui/package.json
+++ b/ui/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^16.14.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
+    "serialize-javascript": "^1.9.1",
     "source-map-support": "^0.5.21",
     "url-search-params": "^1.1.0"
   },
